--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.application.name=API-GATEWAY
+server.port=9191
 
+# register to service discovery
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
