--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -3,3 +3,18 @@ server.port=9191
 
 # register to service discovery
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+
+management.endpoints.web.exposure.include=*
+
+## Routes for Book Service
+spring.cloud.gateway.routes[0].id=BOOK-SERVICE
+spring.cloud.gateway.routes[0].uri=lb://BOOK-SERVICE
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/books/**
+
+
+
+## Routes for Author Service
+spring.cloud.gateway.routes[1].id=AUTHOR-SERVICE
+spring.cloud.gateway.routes[1].uri=lb://AUTHOR-SERVICE
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/authors/**
