--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+spring.application.name=CONFIG-SERVER
+server.port=8888
+# Register to Service discover
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+spring.cloud.config.server.git.uri=https://github.com/theisaachome/spring-config-server-repo
+spring.cloud.config.server.git.clone-on-start=true
+spring.cloud.config.server.git.default-label=main
