--- a/author-service/src/main/resources/application.properties
+++ b/author-service/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 
 
-server.port=8082
+#server.port=8082
 spring.application.name=AUTHOR-SERVICE
-
+spring.config.import=optional:configserver:http://localhost:8888
 # database connection
-spring.datasource.url=jdbc:mysql://localhost:3306/blogdb
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/blogdb
+#spring.datasource.username=root
+#spring.datasource.password=root
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 # register to service discovery
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
