--- a/book-service/src/main/resources/application.properties
+++ b/book-service/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 server.port=8081
-spring.application.name=BOOK-SERVICE
-
 # database connection
-spring.datasource.url=jdbc:mysql://localhost:3306/blogdb
-spring.datasource.username=root
-spring.datasource.password=root
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/blogdb
+#spring.datasource.username=root
+#spring.datasource.password=root
+##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 # register to service discovery
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+spring.application.name=BOOK-SERVICE
+spring.config.import=optional:configserver:http://localhost:8888
+management.endpoints.web.exposure.include=*
